--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,19 @@
-.App {
-  text-align: center;
+body {
+	background: black;
+	overflow: hidden;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.info-container {
+	flex: 2;
+	color: white;
+	padding: 3%;
+	z-index: 2;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.summary {
+	font-family: 'Raleway', sans-serif;
+	padding: 3%;
+	margin-top: 2%;
+	font-size: 16pt;
+	box-shadow: 2px 2px 15px #ffccc9;
 }
