--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -6,13 +6,16 @@
 }
 .img-container {
 	flex: 1;
-	width: 25%;
+	width: 30%;
 }
 .display-pic {
 	height: 90%;
 	margin-left: 5%;
 	margin-top: 5%;
 	border-radius: 2%;
+}
+.info-container {
+	flex: 3;
 }
 .info-title {
 	font-family: 'PT Sans', sans-serif;
