--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -7,3 +7,13 @@
 .resume-icon {
 	color: white;
 }
+
+.about-summary {
+	font-family: 'Raleway', sans-serif;
+	padding: 3%;
+	margin-top: 2%;
+	margin-right: 7%;
+	margin-left: 2%;
+	font-size: 16pt;
+	box-shadow: 2px 2px 15px #ffccc9;
+}
