--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -11,9 +11,7 @@
 .about-summary {
 	font-family: 'Raleway', sans-serif;
 	padding: 3%;
-	margin-top: 2%;
-	margin-right: 7%;
-	margin-left: 2%;
+	margin: 0 auto;
 	font-size: 16pt;
 	box-shadow: 2px 2px 15px #ffccc9;
 }
