--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -12,6 +12,7 @@
 	font-family: 'Raleway', sans-serif;
 	padding: 3%;
 	margin: 0 auto;
+	margin-top: 2%;
 	font-size: 16pt;
 	box-shadow: 2px 2px 15px #ffccc9;
 }
