--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -14,6 +14,7 @@
 	margin-top: 5%;
 	border-radius: 2%;
 }
+
 .info-container {
 	flex: 3;
 }
@@ -37,4 +38,15 @@
 	margin-top: 5%;
 	font-size: 16pt;
 	box-shadow: 2px 2px 15px #ffccc9;
+}
+
+/* For Safari Browser 10.1+ Only */
+@media not all and (min-resolution:.001dpcm) { 
+    @media {
+        .display-pic { 
+            height: 70%;
+            width: 100%;
+            margin-top: 15%;
+        }
+    }
 }
