--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -53,3 +53,21 @@
 .nav-item :hover {
 	text-shadow: 2px 2px 2px #ffccc9;
 }
+
+@media only screen 
+  and (max-device-width: 480px)
+  and (orientation: portrait) {
+	.header-container {
+		flex-direction: column; 
+		margin-right: -9%;
+		margin-left: -4%; 
+	}	  
+
+	.header-title {
+		text-align: center; 
+		flex: 1; 
+		font-size: 20pt;
+		margin-left: 0;
+		margin: 0 auto;
+	}
+}
