--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -16,7 +16,7 @@
 }
 
 .info-container {
-	flex: 3;
+	flex: 1;
 }
 .info-title {
 	font-family: 'PT Sans', sans-serif;
@@ -54,10 +54,37 @@
 @media only screen 
   and (max-device-width: 480px)
   and (orientation: portrait) {
-	  /* .main-container { 
-		flex-direction: column;
-	  }
+	  .main-container { 
+			flex-direction: column;
+			width: 100%;
+		}
+		
+		.img-container {
+			width: 100%; 
+		}
+
 	  .display-pic {
-		  height: 20%;
-	  } */
+			width: 80%; 
+			height: 90%;
+			margin-left: 10%; 
+		}
+		
+		.title-one {
+			margin: 0; 
+		}
+
+		.title-two {
+			margin: 0; 
+			font-size: 25pt;
+			margin-bottom: 25px;  
+		}
+
+		/* .info-container {
+			
+		} */
+
+		.info-summary {
+			font-size: 14pt; 
+			margin: 10px;
+		}
 }
