--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -56,7 +56,7 @@
   and (orientation: portrait) {
 	  .main-container { 
 			flex-direction: column;
-			width: 100%;
+			width: 100vw;
 		}
 		
 		.img-container {
@@ -78,9 +78,9 @@
 			font-size: 25pt;
 			margin-bottom: 25px;  
 		}
-		
+
 		.info-summary {
-			font-size: 14pt; 
+			font-size: 15pt; 
 			margin: 10px;
 		}
 }
